[Wikitext-Markup, Wikidoc-Editor] Added support for embedded HTML
Signed-off-by: Stephan Wahlbrink <sw@wahlbrink.eu>